@@ -1,3 +1,10 @@
+2008-01-17 Jorg Schuler <jcsjcs at users.sourceforge.net>
+
+	* src/display_tracks.c: let gtkpod remember column sizes again.
+
+	* src/prefs.c: enable horizontal scrollbar in the track view by
+	  default.
+
 2009-01-14  Todd Zullinger  <tmzullinger at users.sourceforge.net>
 
 	* po/zh_CN.po: Update simple Chinese translation (Tan Zhixin)
